# HYLIST

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Makefile  _add_ml_prediction.py  _add_relationship.py  docker-compose.yml  openapi.yaml  package.json
.claude/skills/agent/: SKILL.md
.claude/skills/architecture/: SKILL.md
.claude/skills/backend/: SKILL.md
.claude/skills/frontend/: SKILL.md
.claude/skills/git-workflow/: SKILL.md
.claude/skills/ml/: SKILL.md
.claude/skills/testing/: SKILL.md
.claude/templates/: router.template.py  service.template.py
.dvc/: config
.github/: pull_request_template.md
.github/workflows/: ci.yml
.husky/: pre-push
backend/: .coverage  Dockerfile  Dockerfile.nlp  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 077b7c084187_add_ml_predictions_table_for_shadow_mode.py  af6a8a3d6f86_init_phase_1.py
backend/hylist_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/src/: main.py
backend/src/api/v1/: auth.py  events.py  ml.py  projects.py  tasks.py
backend/src/core/: auth.py  celery_app.py  config.py  database.py  errors.py  logging.py  redis.py  resilience.py  security.py  sse.py
backend/src/middleware/: audit_log.py  idempotency.py
backend/src/models/: __init__.py
backend/src/schemas/: auth.py  common.py  project.py  task.py  user.py
backend/src/services/: auth_service.py  ml_service.py  project_service.py  task_service.py
backend/src/workers/: ml_worker.py  nlp_worker.py
backend/tests/: conftest.py
backend/tests/integration/: test_auth_api.py  test_services.py
backend/tests/ml/: test_extractor.py  test_parity.py
backend/tests/unit/: test_auth_service.py  test_ml_service.py  test_project_service.py  test_sse.py  test_task_service.py
docs/: MEMORY.md  setup-branch-protection.sh
docs/adr/: ADR-001-sse-vs-websocket.md  ADR-002-onnx-vs-pickle.md  ADR-003-setfit-vs-fine-tuning.md
docs/retros/: 2026-05-05-project-setup.md  2026-05-06-phase1-review.md  2026-05-07-ml-engine-shadow-mode.md  2026-05-09-w11-frontend-resilience.md
frontend/: .env.example  Dockerfile  package-lock.json  package.json
frontend/src/: middleware.ts
frontend/src/app/: globals.css  layout.tsx
frontend/src/app/(auth)/login/: page.tsx
frontend/src/app/(auth)/register/: page.tsx
frontend/src/app/dashboard/: layout.tsx  page.tsx
frontend/src/components/: providers.tsx
frontend/src/components/kanban/: KanbanBoard.tsx  TaskCard.tsx
frontend/src/hooks/: useSSE.ts
frontend/src/lib/api/: client.ts  types.ts
frontend/src/lib/auth/: session.ts
frontend/src/lib/project/: context.tsx
infra/: prometheus.yml
infra/grafana/dashboards/: dashboards.yml  hylist_main.json
ml/: mock_generator.py  requirements.txt
ml/data/: .gitignore  generate_training_data.py  tasks_training.csv  tasks_training.csv.dvc
ml/features/: task_extractor.py
ml/models/: feature_names_v1.json  priority_predictor_v1.onnx  priority_predictor_v1.ubj
ml/nlp/: requirements.txt  tag_classifier.py
ml/nlp/training/: generate_nlp_data.py  train_tagger.py
ml/training/: export_onnx.py  train.py
mlruns/1/eee3c1fb4d06411782c2c95ff2344570/artifacts/: feature_importance.json
mlruns/1/models/m-5fa8546f5a7844af9676e91dd0112a60/artifacts/: MLmodel  conda.yaml  model.ubj
mlruns/1/models/m-b0eb3825602044cca7412655decda471/artifacts/: MLmodel  model.ubj
