[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hylist-backend"
version = "0.1.0"
description = "HYLIST — Intelligent Task Orchestration System — Backend"
requires-python = ">=3.12"
dependencies = [
    # ─── Web Framework ──────────────────────────────────────────────────
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",

    # ─── Database ───────────────────────────────────────────────────────
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",          # PostgreSQL async driver
    "alembic>=1.13.0",          # Database migrations

    # ─── Validation ─────────────────────────────────────────────────────
    "pydantic[email]>=2.7.0",
    "pydantic-settings>=2.3.0",

    # ─── Auth ───────────────────────────────────────────────────────────
    "python-jose[cryptography]>=3.3.0",  # JWT
    "passlib[bcrypt]>=1.7.4",            # Password hashing

    # ─── Cache / Queue ──────────────────────────────────────────────────
    "redis[asyncio]>=5.0.0",
    "celery[redis]>=5.4.0",

    # ─── Rate Limiting ──────────────────────────────────────────────────
    "slowapi>=0.1.9",

    # ─── Real-time (SSE) ────────────────────────────────────────────────
    "sse-starlette>=2.0.0",

    # ─── Logging & Observability ────────────────────────────────────────
    "structlog>=24.0.0",
    "sentry-sdk[fastapi]>=2.0.0",
    "opentelemetry-api>=1.24.0",
    "opentelemetry-sdk>=1.24.0",
    "opentelemetry-instrumentation-fastapi>=0.45b0",
    "prometheus-fastapi-instrumentator>=7.0.0",

    # ─── Privacy / PII ──────────────────────────────────────────────────
    "presidio-analyzer>=2.2.0",
    "presidio-anonymizer>=2.2.0",

    # ─── Utilities ──────────────────────────────────────────────────────
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",             # Async HTTP client (cho internal calls)
    "python-multipart>=0.0.9",   # Form uploads
]

[project.optional-dependencies]
dev = [
    # ─── Testing ────────────────────────────────────────────────────────
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "testcontainers[postgres]>=4.0.0",   # Real PostgreSQL trong tests
    "schemathesis>=3.0.0",               # Contract testing với OpenAPI
    "factory-boy>=3.3.0",                # Test data factories

    # ─── Code Quality ───────────────────────────────────────────────────
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "bandit>=1.7.0",             # Security linting

    # ─── ML / Phase 2 ───────────────────────────────────────────────────
    # Uncomment khi đến Phase 2 (Tuần 5)
    # "xgboost>=2.0.0",
    # "scikit-learn>=1.4.0",
    # "mlflow>=2.13.0",
    # "onnx>=1.16.0",
    # "onnxruntime>=1.18.0",
    # "skl2onnx>=1.16.0",
    # "shap>=0.45.0",
    # "great-expectations>=0.18.0",
    # "dvc>=3.0.0",
    # "pandas>=2.2.0",
    # "numpy>=1.26.0",

    # ─── NLP / Phase 3 ──────────────────────────────────────────────────
    # Uncomment khi đến Phase 3 (Tuần 9)
    # "setfit>=1.0.0",
    # "transformers>=4.40.0",
    # "torch>=2.0.0",

    # ─── Agent / Phase 4 ────────────────────────────────────────────────
    # Uncomment khi đến Phase 4 (Tuần 13)
    # "langchain>=0.2.0",
    # "langchain-openai>=0.1.0",
    # "openai>=1.30.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
env = [
    "APP_ENV=test",
    "SECRET_KEY=test-secret-key-not-for-production",
]

[tool.coverage.run]
omit = [
    "src/core/celery_app.py",
    "src/workers/*",
    "src/main.py",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "S"]
ignore = [
    "S101",   # assert is fine in tests
    "B008",   # FastAPI Depends/Query in function args is the intended pattern
    "S104",   # 0.0.0.0 binding is intentional for containerized services
    "S105",   # hardcoded secret placeholders are fine in config defaults
    "UP046",  # Generic[T] subclass — keep for Pydantic v2 compatibility
]

[tool.ruff.lint.per-file-ignores]
# models/__init__.py dùng Unicode box-drawing comments (─────) để phân tách sections.
# Các comment separator này dài hơn 100 chars là có chủ đích, không phải code thật.
"src/models/__init__.py" = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "ml*"]
