[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# ─── Project Metadata ──────────────────────────────────────────────────────────
[project]
name = "hylist-backend"
version = "0.1.0"
description = "HYLIST — Intelligent Task Orchestration System — Backend"
requires-python = ">=3.12"

# Core runtime deps — MỌI container đều cần (API, Worker, NLP Worker)
dependencies = [
    # Web Framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",   # Form uploads
    "sse-starlette>=2.0.0",      # Server-Sent Events

    # Database
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",           # PostgreSQL async driver
    "alembic>=1.13.0",           # DB migrations

    # Validation & Settings
    "pydantic[email]>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.0",

    # Auth
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",

    # Queue & Cache
    "redis[asyncio]>=5.0.0",
    "celery[redis]>=5.4.0",

    # Rate Limiting
    "slowapi>=0.1.9",

    # Observability
    "structlog>=24.0.0",
    "sentry-sdk[fastapi]>=2.0.0",
    "prometheus-fastapi-instrumentator>=7.0.0",

    # Privacy / PII (dùng trong API)
    "presidio-analyzer>=2.2.0",
    "presidio-anonymizer>=2.2.0",

    # Utilities
    "httpx>=0.27.0",
]

# ─── Dependency Groups (thay thế [dev] monolith cũ) ──────────────────────────
# Pattern: mỗi container chỉ install đúng group nó cần
#
# API + Worker container:     uv sync --group ml
# NLP Worker container:       uv sync --group ml --group nlp
# Local dev (full):           uv sync --all-groups
# CI (unit tests only):       uv sync --group test

[dependency-groups]

# ── test: Unit + Integration testing ──────────────────────────────────────────
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "anyio>=4.4.0",
    "aiosqlite>=0.20.0",       # SQLite driver cho in-memory tests
    "httpx>=0.27.0",           # ASGI test client
    "starlette-testclient>=0.4.0",
]

# ── lint: Code quality tools (CI-only, không cài vào production image) ─────────
lint = [
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "bandit>=1.7.0",
]

# ── ml: ONNX inference + SHAP (API + Worker container) ────────────────────────
# Chỉ các lib cần cho inference — KHÔNG có training deps
# Đây là những thứ cần trong runtime container, nên là group (không phải optional)
ml = [
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "onnxruntime>=1.18.0",
    "shap>=0.45.0",
]

# ── nlp: PyTorch + SetFit (NLP Worker container ONLY) ─────────────────────────
# 2GB+, KHÔNG bao giờ install vào API container
# Build riêng bằng Dockerfile.nlp
nlp = [
    "torch>=2.0.0",
    "transformers>=4.40.0",
    "sentence-transformers>=2.7.0",
    "setfit>=1.0.0",
    "datasets>=2.19.0",
]

# ── training: ML training pipeline (chạy offline, không vào container) ────────
# Chạy: uv run --group training python ml/training/train.py
training = [
    "xgboost>=2.0.0",
    "scikit-learn>=1.4.0",
    "mlflow>=2.13.0",
    "onnx>=1.16.0",
    "skl2onnx>=1.16.0",
    "great-expectations>=0.18.0",
    "dvc>=3.0.0",
]

# ── agent: LangChain Agent (Phase 4, Tuần 13) ─────────────────────────────────
agent = [
    # "langchain>=0.2.0",
    # "langchain-openai>=0.1.0",
    # "openai>=1.30.0",
]

# ─── uv Configuration ─────────────────────────────────────────────────────────
[tool.uv]
# default-groups: khi developer chay 'uv sync' khong co argument,
# cai dat ca test + lint + ml de co full dev experience
default-groups = ["test", "lint", "ml"]

# no-build-isolation-package: shap compile C++ can pre-installed numpy
# uv tu dong xu ly theo dung thu tu, khong bi OOM nhu pip
no-build-isolation-package = ["shap"]

# ─── Pytest ────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
env = [
    "APP_ENV=test",
    "SECRET_KEY=test-secret-key-not-for-production",
]

# ─── Coverage ──────────────────────────────────────────────────────────────────
[tool.coverage.run]
omit = [
    "src/core/celery_app.py",
    "src/workers/*",
    "src/main.py",
]

# ─── Ruff ──────────────────────────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "S"]
ignore = [
    "S101",   # assert is fine in tests
    "B008",   # FastAPI Depends() in function args is intended
    "S104",   # 0.0.0.0 binding intentional for containers
    "S105",   # hardcoded secret placeholders fine in config defaults
    "UP046",  # Generic[T] subclass — keep for Pydantic v2 compatibility
]

[tool.ruff.lint.per-file-ignores]
"src/models/__init__.py" = ["E501"]
"tests/**" = ["S106", "B017", "F841", "E402", "S101"]

# ─── Mypy ──────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

# ─── Hatchling (build backend) ─────────────────────────────────────────────────
[tool.hatch.build.targets.wheel]
packages = ["src", "ml"]
